# theGameOfPong

./: CMakeLists.txt  README.md
assets/: project.canis
assets/materials/: box.material
assets/scenes/: 3d_demo.scene  SpriteDemo.scene  game_of_life.scene  sprite_demo.scene
assets/shaders/: sprite.fs
src/: App.cpp  App.hpp  main.cpp
src/ECS/Components/: GameOfLifeComponent.hpp
src/ECS/ScriptableEntities/: BeachBall.hpp  DebugCamera2D.hpp  FPSCounter.hpp  FlyCam.hpp  GameOfLifeLoader.hpp  LookAtTarget.hpp  Paddle.hpp  Rotate.hpp  SpawnCube.hpp
src/ECS/Systems/: GameOfLifeSystem.hpp
